yaml_files/dashboard_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamlit-dashboard
  namespace: streamlit-dashboard
spec:
  replicas: 1  # Update the number of replicas to 1
  selector:
    matchLabels:
      app: streamlit-dashboard
  template:
    metadata:
      labels:
        app: streamlit-dashboard
    spec:
      containers:
      - name: streamlit-dashboard
        image: streamlit-dashboard
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8501
        resources:
          limits:
            cpu: "1"
            memory: "4Gi"
          requests:
            cpu: "0.5"
            memory: "1Gi"
