yaml_files/dashboard_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamlit-service
  namespace: streamlit-dashboard
spec:
  type: NodePort
  selector:
    app: streamlit-dashboard
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8501
