yaml_files/dashboard_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streamlit-dashboard-ingress
  namespace: streamlit-dashboard
spec:
  rules:
  - host: streamlit.192.168.49.2.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: streamlit-service
            port:
              number: 80
